# resume-forge

./: .gitignore  README.md  USAGE.md  pyproject.toml  setup.py
resume_forge/: cli.py  config.py  embeddings.py  llm.py  pipeline.py  prompts.py  vectorstore.py
templates/: action_words.json  prompts.yaml  resume.tex
tests/: test_pipeline.py  test_vectorstore.py
vault/: _template_project.md  _template_role.md  project_distributed_cache.md  project_ml_pipeline.md  role_senior_backend.md
